# cento

./: LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-15-lume-language.md  2026-06-20-bootstrap-sub1-language-enhancements.md  2026-06-20-stdlib-sub1-math-module.md  2026-06-27-stdlib-bootstrap-collection.md  2026-06-27-stdlib-bootstrap-seq-extended.md  2026-06-27-stdlib-bootstrap.md  2026-06-27-variadic-rest-params.md  2026-06-28-stdlib-full-bootstrap.md
docs/superpowers/specs/: 2026-06-15-lume-language-design.md  2026-06-20-bootstrap-sub1-language-enhancements-design.md  2026-06-20-stdlib-sub1-math-module-design.md  2026-06-27-stdlib-bootstrap-collection-design.md  2026-06-27-stdlib-bootstrap-design.md  2026-06-27-stdlib-bootstrap-seq-extended-design.md  2026-06-27-variadic-rest-params-design.md  2026-06-28-stdlib-full-bootstrap-design.md
examples/: hello.ct
src/: __main__.py  ast_nodes.py  environment.py  errors.py  evaluator.py  lexer.py  modules.py  parser.py  repl.py  types.py
src/std/: __init__.py  collection.ct  collection.py  fs.py  io.py  math.py  mutable.py  seq.ct  seq.py  string.ct  string.py  util.ct  util.py
tests/: test_bootstrap.py  test_environment.py  test_evaluator.py  test_integration.py  test_lexer.py  test_modules.py  test_parser.py  test_std.py  test_std_math.py  test_std_seq.py  test_std_string.py  test_std_util.py  test_types.py
